--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "@types/bun": "latest",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@types/redis": "^4.0.11"
+    "@types/redis": "^4.0.11",
+    "@types/socket.io": "^3.0.2"
   },
   "peerDependencies": {
     "typescript": "^5"
@@ -15,6 +16,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "redis": "^5.5.6"
+    "redis": "^5.5.6",
+    "socket.io": "^4.8.1"
   }
 }
