--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/redis": "^4.0.11",
-    "@types/socket.io": "^3.0.2"
+    "@types/socket.io": "^3.0.2",
+    "@types/supertest": "^6.0.3"
   },
   "peerDependencies": {
     "typescript": "^5"
@@ -17,6 +18,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "redis": "^5.5.6",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "supertest": "^7.1.1"
   }
 }
