--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "@types/bun": "latest",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/redis": "^4.0.11",
     "@types/socket.io": "^3.0.2",
     "@types/supertest": "^6.0.3"
@@ -17,6 +18,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "redis": "^5.5.6",
     "socket.io": "^4.8.1",
     "supertest": "^7.1.1"
