--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -24,5 +24,6 @@
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false,
     "rootDir": "./src"
-  }
+  },
+  "include": ["src/**/*"]
 }
