--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -24,7 +24,7 @@ services:
       - /app/node_modules
 
     command: 
-      sh -c "bun install && bun --watch index.ts"
+      sh -c "bun install && bun --watch src/index.ts"
 
 
   redis:
