--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/socket.io": "^3.0.2",
+    "@types/socket.io-client": "^3.0.0",
     "@types/supertest": "^6.0.3",
     "socket.io-client": "^4.8.1"
   },
