--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,8 @@ jobs:
           SECRET_KEY: ${{ secrets.SECRET_KEY }}
         run: |
           echo "🚀 Starting Docker deployment..."
-          if ! cd backend && sudo docker-compose up --build -d; then
+          cd backend
+          if ! sudo docker-compose up --build -d; then
             echo "❌ Docker deployment failed"
             echo "Container logs:"
             docker-compose logs
