--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -6,9 +6,9 @@ services:
     ports:
       - "4000:4000"    
 
-    env_file:
-      - ./.env         # Load common dev variables
-      - ./.env.local   # Load local overrides (and potentially sensitive ones)
+    # env_file:
+    #   - ./.env         # Load common dev variables
+    #   - ./.env.local   # Load local overrides (and potentially sensitive ones)
 
     volumes:
       - .:/app
